name:          ftdi
version:       0.1
cabal-version: >=1.6
build-type:    Simple
stability:     experimental
author:        Roel van Dijk, Bas van Dijk
maintainer:    vandijk.roel@gmail.com, v.dijk.bas@gmail.com
copyright:     (c) 2009 Roel van Dijk, Bas van Dijk
license:       BSD3
license-file:  LICENSE
synopsis:      A thin layer over USB to communicate with FTDI chips
category:      System

Library
  exposed-modules: System.FTDI
  build-depends: base                 >= 4       && < 4.2
               , base-unicode-symbols == 0.1.*
               , bytestring           >= 0.9.1.4 && < 0.10
               , safe                 == 0.2.*
               , time                 >= 1.1.4   && < 1.2
               , transformers         >= 0.1.4   && < 0.2
               , usb                  == 0.3.*
  ghc-options: -Wall
